[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "progress"
version = "0.0.1"
description = "A progress bar command line tool"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.scripts]
progress = "progress.progress:main"
[project.entry-points."console_scripts"]
progress = "progress.progress:main"
